--- a/.github/workflows/laravel-test.yml
+++ b/.github/workflows/laravel-test.yml
@@ -13,27 +13,32 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2
-    - name: apiへ移動
-      run: cd api
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+      working-directory: ./api
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      working-directory: ./api
     - name: Generate key
       run: php artisan key:generate
+      working-directory: ./api
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
+      working-directory: ./api
     - name: Create Database
       run: |
         mkdir -p database
         touch database/database.sqlite
+      working-directory: ./api
     - name: artisan コマンドが正しく実行されるか
       run: |
         php artisan cache:clear
         php artisan config:cache
         php artisan route:clear
+      working-directory: ./api
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
       run: vendor/bin/phpunit
+      working-directory: ./api
