県から公園一覧を表示させられるようになった

--- a/.docs/api-document.yaml
+++ b/.docs/api-document.yaml
@@ -238,7 +238,7 @@ paths:
           schema:
             type: string
             format: 'date-time'
-         - name: pre_numper
+         - name: pre_number
           in: query
           description: 県ナンバー
           schema:
