--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
     "serve": "nuxt serve",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint": "npm run lint:js",
-    "test": "jest"
+    "test": "jest",
+    "copy:geojson": "cp ../api/storage/app/public/geojson/* ./static/geojson"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.11.0",
