Mapboxラッパーライブラリのインストールとマップ表示まで

--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.11.0",
     "@nuxtjs/device": "^1.2.7",
-    "nuxt": "^2.13.0"
+    "mapbox-gl": "^1.11.1",
+    "nuxt": "^2.13.0",
+    "vue-mapbox": "^0.4.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.0.0",
