--- a/.github/workflows/api-laravel.yml
+++ b/.github/workflows/api-laravel.yml
@@ -35,6 +35,7 @@ jobs:
         php artisan cache:clear
         php artisan config:cache
         php artisan route:clear
+        php artisan view:clear
       working-directory: ./api
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
@@ -42,13 +43,13 @@ jobs:
         DB_DATABASE: database/database.sqlite
       run: vendor/bin/phpunit
       working-directory: ./api
-  
+
   deploy:
-    
+
     if: github.ref == 'refs/heads/master'
     needs: [laravel-tests]
     runs-on: ubuntu-latest
-  
+
     steps:
       - uses: actions/checkout@v2
       - name: Deploy
@@ -58,4 +59,4 @@ jobs:
           HOST_NAME: ${{ secrets.XSERVER_HOST_NAME }}
         run: |
           echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-          ssh -p 10022 -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} 'cd ~/safety-park.xyz/public_html/api/safety-park && git pull origin master && cd api && composer update && php artisan config:cache && php artisan route:cache && php artisan view:cache'
+          ssh -p 10022 -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOST_NAME} 'cd ~/safety-park.xyz/public_html/api/safety-park && git pull origin master && cd api && composer update && php artisan cache:clear && php artisan config:cache && php artisan route:clear && php artisan view:clear'
